syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "IncomeShared.proto";

message CreateIncomeRequest {
    int32 CustomerOnSAId = 1;

    int32 IncomeTypeId = 2;
    
    DomainServices.HouseholdService.IncomeBaseData BaseData = 3;
    
    oneof Data {
        DomainServices.HouseholdService.IncomeDataEmployement Employement = 20;
        DomainServices.HouseholdService.IncomeDataOther Other = 21;
        DomainServices.HouseholdService.IncomeDataEntrepreneur Entrepreneur = 22;
        DomainServices.HouseholdService.IncomeDataRent Rent = 23;
    }
}

message CreateIncomeResponse {
    int32 IncomeId = 1;
}