syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "CustomerOnSA.proto";

message GetCustomerListRequest {
    int32 SalesArrangementId = 1;
}

message GetCustomerListResponse {
    repeated DomainServices.HouseholdService.CustomerOnSA Customers = 1;
}